# btc-vanity

./: .gitignore  Cargo.toml  README.md  amogus-wallet.txt  dist-workspace.toml  example-inputs.txt  strings.txt  test-inputs.txt  wallets.txt
.github/workflows/: release.yml  rust.yml
src/: clap.rs  cli.rs  decoration.rs  error.rs  file.rs  flags.rs  flags_and_args.rs  keys_and_address.rs  lib.rs  main.rs  utils.rs  vanity_addr_generator.rs
src/keys_and_address/: btc.rs  eth.rs  mod.rs  sol.rs
src/vanity_addr_generator/: chain.rs  comp.rs  compx.rs  mod.rs  vanity_addr.rs
tests/: benchmark.rs  cli_tests.rs  integration_tests.rs
