[package]
name = "btc-vanity"
version = "1.4.0"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
description = "A bitcoin vanity address generator written with the Rust programming language."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Emivvvvv/btc-vanity"
documentation = "https://docs.rs/btc-vanity/latest/btc_vanity/index.html"


[dependencies]
rand = "0.9.0-beta.3"
bitcoin = { version = "0.32.5", features = ["rand-std"] }
thiserror = "2.0.11"
clap = "4.5.26"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
regex = "1.11.1"

[profile.test]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
