[package]
name = "btc-vanity"
version = "2.1.1"
authors = ["Emirhan TALA <tala.emirhan@gmail.com>"]
description = "A blazingly fast Bitcoin, Ethereum, and Solana vanity address generator."
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Emivvvvv/btc-vanity"
documentation = "https://docs.rs/btc-vanity/latest/btc_vanity/index.html"
keywords = ["bitcoin", "ethereum", "solana", "vanity", "address"]

[dependencies]
rand = "0.9.0-beta.3"
bitcoin = { version = "0.32.5", features = ["rand-std"] }
thiserror = "2.0.11"
clap = "4.5.26"
num-traits = "0.2.19"
regex = "1.11.1"
memx = "0.1.32"

# Dependencies for Ethereum support
hex = { version = "0.4.3", optional = true }  # Make it optional
secp256k1 = { version = "0.30.0", features = ["rand"], optional = true }  # Make it optional
sha3 = { version = "0.11.0-pre.4", optional = true }  # Make it optional

# Dependencies for Solana support
solana-sdk = { version = "2.1.10", default-features = false, features = ["full"], optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
aho-corasick = "1.1.3"

[features]
default = []

ethereum = ["hex", "secp256k1", "sha3"]
solana = ["solana-sdk", "openssl"]
all = ["solana", "ethereum"]

[dev-dependencies]
tempfile = "3.6"

[profile.test]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
